# qt_conan_template

./: CMakeLists.txt  README.md  qt.conf.in
cmake/: Conan.cmake
src/: CMakeLists.txt  main.cpp  test_widget.cpp  test_widget.h
